--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.2.0",
     "prettier": "2.3.2",
