--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint . && prettier --check .",
     "lint:fix": "eslint . --fix && prettier --write .",
-    "test": "jest",
+    "test": "jest --coverage",
     "prepare": "husky install",
     "build": "webpack --node-env production",
     "dev": "webpack serve"
